--- a/apps/recibos/templates/recibos/dashboard.html
+++ b/apps/recibos/templates/recibos/dashboard.html
@@ -133,12 +133,12 @@
                         </h2>
                         <div id="log-display"
                             class="flex-grow overflow-y-auto bg-gray-50 p-3 rounded-lg text-xs font-mono border border-gray-200">
-                            <p class="text-gray-400">Log inicial: Listo para cargar archivo.</p>
+                            <p class="text-gray-400"></p>
                         </div>
 
                         {# BOTÓN: Limpiar Logs (SÓLO VISUAL) #}
                         <button type="button"
-                            data-message="¿Estás seguro que deseas **LIMPIAR el contenido visual de los Logs**? Esto NO borra los recibos de la BD."
+                            data-message="¿Estás seguro que deseas LIMPIAR el contenido visual de los Logs?"
                             data-confirm-text="Sí, Limpiar"
                             data-color="gray"
                             id="clear-visual-logs-button"
